<resources>

    <string name="app_name">Simple Calendar</string>

    <!-- MAIN -->
    <string name="default_calendar">Default calendar</string>
    <string name="open_calendar_dialog">Open calendar dialog</string>

    <string name="change_attributes_programmatically">Change attributes programmatically</string>

    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="range">Range</string>
    <string name="none">None</string>

    <!-- MENU -->
    <string name="select_all_fridays">Select All Fridays</string>
    <string name="unselect_all_fridays">Unselect All Fridays</string>
    <string name="select_three_months">Select Prev/Curr/Next Months</string>
    <string name="unselect_three_months">Unselect Prev/Curr/Next Months</string>
    <string name="clear_selections">Clear selections</string>
    <string name="log_selected_days">Log selected days</string>

</resources>